--- a/blackjack-game-frontend/src/components/Registration.css
+++ b/blackjack-game-frontend/src/components/Registration.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;
 }
 
-.login-container {
+.Registration-container {
     width: 100%;
     max-width: 25rem;
     margin: auto;
@@ -18,13 +18,13 @@ body {
     box-shadow: 0 0 1.25rem rgba(0, 0, 0, 0.1);
 }
 
-.login-container h2 {
+.Registration-container h2 {
     text-align: center;
     margin-bottom: 1.875rem;
     color: #eadb05;
 }
 
-.login-input {
+.input {
     width: 22rem;
     padding: 0.95rem;
     margin-bottom: 0.95rem;
@@ -32,8 +32,7 @@ body {
     border-radius: 5px;
 }
 
-.login-button,
-.Signup-button {
+.register {
     width: 11rem;
     padding: 0.75rem;
     margin-top: 2rem;
@@ -52,6 +51,6 @@ body {
     width: 100%;
 }
 
-.login-button:hover {
+.register:hover {
     background-color: #00b34e;
 }
