--- a/blackjack-game-frontend/src/components/Login.css
+++ b/blackjack-game-frontend/src/components/Login.css
@@ -1,6 +1,8 @@
-body {
+.login-page {
     margin: 0;
     padding: 0;
+    width: 100vw;
+    height: 100vh;
     background-image: url('../images/casino-7260767.jpg');
     background-size: cover;
 }
@@ -52,6 +54,7 @@ body {
     width: 100%;
 }
 
-.login-button:hover {
+.login-button:hover, .Signup-button:hover {
     background-color: #00b34e;
+    transform: scale(1.1);
 }
