--- a/blackjack-game-frontend/src/components/GameSelection.css
+++ b/blackjack-game-frontend/src/components/GameSelection.css
@@ -14,8 +14,6 @@
     max-height: 100%;
     margin: auto;
     position: absolute;
-    /* top: 20%;
-    left: 35%; */
     padding: 2.5rem;
     background-color: rgba(4, 0, 0, 0);
     border-radius: 1rem;
@@ -25,43 +23,75 @@
 .game-selection-container h2 {
     text-align: center;
     margin-bottom: 1.875rem;
-    color: #00ddff;
+    color: #5202c8;
+    font-size: 4rem;
 }
 
-
-.blackjack,
-.baccarat,
-.poker {
+.buttonBox {
+    overflow: hidden;
+    position: relative;
     width: 100%;
     height: 25%;
-    padding: 0.75rem;
-    /* margin-top: 2rem; */
-    /* margin-left: 0.7rem; */
-    background-color: #007bff;
-    color: #fff;
+    margin-bottom: 0.5rem; /* Optional: Adds spacing between buttons */
+}
+
+.buttonBox > button {
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: #000000;
+    color: #55009f;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 1s ease, color 1s ease, font-size 1s ease;
+    font-size: 2rem;
 }
 
-.blackjack:hover,
-.baccarat:hover,
-.poker:hover {
-    background-color: #00b34e;
-    transform: scale(1.1);
+.buttonBox:hover > button {
+    color: rgb(0, 0, 0);
+    background-color: #e600ff;
+    transform: scale(1.05);
+    font-size: 2.5rem;
+    z-index: 2;
 }
 
-.button-container {
-    display: flex;
-    justify-content: center;
+.buttonBox .border {
+    z-index: 1;
+    background: rgb(79, 0, 205);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    transform: rotate(45deg);
+    transition: transform 2s ease, width 1s ease, height 1s ease;
+}
+
+.buttonBox > .border:nth-of-type(1) {
+    top: -35px;
+    left: -30px; 
+}
+
+.buttonBox > .border:nth-of-type(2) {
+    top: -35px;
+    right: -30px;
+}
+
+.buttonBox > .border:nth-of-type(3) {
+    bottom: -35px;
+    left: -30px;
+}
+
+.buttonBox > .border:nth-of-type(4) {
+    bottom: -35px;
+    right: -30px;
+}
+
+.buttonBox:hover .border {
+    transform: scale(15.7) rotate(45deg);
     width: 100%;
+    height: 100%;
 }
 
-.blackjack{
-    background-image: url('../images/cards.gif');
-    background-size: cover;
-    background-position: center;
-
+.buttonBox:hover button {
+    transition: color 2s ease;
 }
-/* --- */
